--- a/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
@@ -5,6 +5,13 @@
   --mobile-margin-top: .25rem;
 }
 
+.logo{
+width: 50px;
+height: 25px;
+margin-bottom: 20px;
+margin-right: 50px;
+}
+
 .navbar {
   display: flex;
   flex-direction: column;
